# kaufman

./: .gitignore  LICENSE  README.md  extract_recipes.py  extracted_recipes.json  pyproject.toml
backend/: .env.example  README.md  config.py  database.py  main.py  migrate_data.py  models.py  requirements.txt  schemas.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  extracted_recipes.json  main.js  style.css
frontend/src/components/: RecipeCard.vue
mimi_recipe_pictures/: IMG_6165.HEIC  IMG_6166.HEIC  IMG_6167.HEIC  IMG_6168.HEIC  IMG_6169.HEIC  IMG_6170.HEIC  IMG_6171.HEIC  IMG_6172.HEIC  IMG_6173.HEIC  IMG_6174.HEIC  IMG_6175.HEIC  IMG_6176.HEIC  IMG_6177.HEIC  IMG_6178.HEIC  IMG_6179.HEIC  IMG_6180.HEIC  IMG_6181.HEIC  IMG_6182.HEIC  IMG_6183.HEIC  IMG_6184.HEIC  IMG_6185.HEIC  IMG_6186.HEIC  IMG_6187.HEIC  IMG_6188.HEIC  IMG_6189.HEIC  IMG_6190.HEIC  IMG_6191.HEIC  IMG_6192.HEIC  IMG_6193.HEIC  IMG_6194.HEIC  IMG_6195.HEIC  IMG_6196.HEIC  IMG_6197.HEIC  IMG_6198.HEIC  IMG_6199.HEIC  IMG_6200.HEIC  IMG_6201.HEIC  IMG_6202.HEIC  IMG_6203.HEIC  IMG_6204.HEIC  (+345 more)
scripts/: extract_recipes.py
scripts/recipe-pair-viewer/: check_recipe_pairs.py  recipe_pair_viewer.html  server.py
